app/frontend-src/k8s/Deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecommstorefrontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ecommstore
  template:
    metadata:
      labels:
        app: ecommstore
    spec:
      containers:
        - name: ecommstorecontainer
          image: ${FULL_IMAGE}
          ports:
            - containerPort: 80  # Changed from 3000 to 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontendsvc
spec:
  type: ClusterIP
  selector:
    app: ecommstore
  ports:
    - port: 80
      targetPort: 80  # Match updated containerPort
